# example-pypfilt-discrete-obs

./: README.md  die.py  example.toml  noxfile.py  prior.ssv  pyproject.toml  roll.py  run-example.py  simulated-rolls.ssv
src/example/: __init__.py
