[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "1.0"
description = "An example of discrete observation models for pypfilt"
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Rob Moss", email = "rgmoss@unimelb.edu.au"}
]
maintainers = [
  {name = "Rob Moss", email = "rgmoss@unimelb.edu.au"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "plotnine ~= 0.12",
    "polars[numpy,pandas] ~= 0.17",
    "pypfilt == 0.8.0",
]

[tool.setuptools]
# Disable automatic package discovery.
py-modules = []

[tool.ruff]
# Enable pyflakes (F), pycodestyle (E, W), and flake8-bugbear (B).
select = ["F", "E", "W", "B"]
line-length = 78
target-version = "py38"

[tool.blue]
line-length = 78
target-version = ["py38"]
